apps/qbittorrent/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
  serviceName: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - image: docker.io/binhex/arch-qbittorrentvpn:5.2.4-1-02
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          securityContext:
            privileged: true
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: videos
              mountPath: /videos
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: nfs-downloads
        - name: videos
          persistentVolumeClaim:
            claimName: nfs-videos
        - name: wireguard-config
          secret:
            secretName: qbittorrent-wg-conf
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
