apps/qbittorrent/incoming-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-incoming
spec:
  ports:
    - port: 63505
  selector:
    app: qbittorrent
  type: LoadBalancer
