apps/qbittorrent/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
    - port: 8080
  selector:
    app: qbittorrent
